@@ -1,6 +1,10 @@
 # ChangeLog for virtual/perl-Time-Piece
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Time-Piece/ChangeLog,v 1.10 2009/12/10 21:42:41 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Time-Piece/ChangeLog,v 1.11 2009/12/14 19:35:33 armin76 Exp $
+
+  14 Dec 2009; Raúl Porcel <armin76@gentoo.org>
+  perl-Time-Piece-1.15.ebuild:
+  alpha/ia64/sparc stable wrt #288026
 
   10 Dec 2009; Brent Baude <ranger@gentoo.org> perl-Time-Piece-1.15.ebuild:
   Marking perl-Time-Piece-1.15 ppc64 stable for bug 288026
